feat: add schema-based multi-tenancy via Hibernate

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -7,6 +7,10 @@ spring:
 
   jpa:
     open-in-view: false
+    properties:
+      hibernate:
+        multiTenancy: SCHEMA
+        default_schema: public
 
   datasource:
     hikari:
