feat(backend): align JPA entities with Flyway schema and enable validation
- Added spring-boot-starter-validation dependency
- Switched Hibernate ddl-auto to `validate`
- Refactored entities (Company, Employee, Project, Task):
  - Replaced raw Object fields with enums (EmployeeRole, TaskStatus)
  - Added proper @Enumerated(EnumType.STRING)
  - Introduced constructors and removed setters where appropriate
  - Added @Embeddable Address and Contact records
  - Added createdAt defaults with @ColumnDefault("now()")
- Updated Flyway V1 schema to match entity model
- Ensured schema validation passes successfully
- Configured entity package scanning

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
       hibernate:
         multiTenancy: SCHEMA
         default_schema: public
+    hibernate:
+      ddl-auto: validate
 
   datasource:
     hikari:
@@ -29,9 +31,6 @@ spring:
     activate:
       on-profile: dev
 
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
   datasource:
     username: postgres
     password: qwas1324
