--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,29 +1,51 @@
-server {
-  listen 80 default_server;
+worker_processes 1;
 
-  location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri $uri/ /index.html;
-  }
+events {
+  worker_connections 1024;
+}
 
-  location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|webp|woff2?|ttf)$ {
-    expires 1y;
-    add_header Cache-Control "public, max-age=31536000, immutable";
-  }
-
-  location = /index.html {
-    expires -1;
-    add_header Cache-Control "no-store, no-cache, must-revalidate";
-  }
-
+http {
   gzip on;
+  gzip_static on;
+  gzip_comp_level 5;
+  gzip_vary on;
+
   gzip_types
-  text/plain
   text/css
+  text/plain
   application/json
   application/javascript
-  text/xml
-  application/xml
-  text/javascript;
+  application/xml;
+
+  upstream backend {
+    server backend:8080;
+  }
+
+  server {
+    listen 80 default_server;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    error_page 404 /40x.html;
+    error_page 500 502 503 504 /50x.html;
+
+    location / {
+      try_files $uri $uri/ /index.html;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|webp|woff2?|ttf)$ {
+      access_log off;
+      add_header Cache-Control "public, immutable";
+      expires 1d;
+    }
+
+    location ^~ /api/ {
+      proxy_http_version 1.1;
+      proxy_pass http://backend;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+  }
 }
